--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: register QEMU
+          command: docker run --rm --privileged docker/binfmt:66f9012c56a8316f9244ffd7622d7c21c1f6f28d
+      - run:
           name: build Linux arm binary
           command: ARCH=armv7l ARMV5_ORG=arm32v5/ ARMV6_ORG=arm32v6/ ./script/build/linux
       - store_artifacts:
