--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,13 +54,12 @@ jobs:
             OS_NAME=Linux PKG_NAME=linux ./script/circle/bintray-deploy.sh
 
   build-linux-arm-binary:
-    machine:
-      enabled: true
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: register QEMU
-          command: docker run --rm --privileged docker/binfmt:66f9012c56a8316f9244ffd7622d7c21c1f6f28d
+          command: docker run --rm --privileged hypriot/qemu-register
       - run:
           name: build Linux arm binary
           command: ARCH=armv7l ARMV5_ORG=arm32v5/ ARMV6_ORG=arm32v6/ ./script/build/linux
