--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
   build-linux-arm-binary:
     working_directory: ~/compose
     docker:
-       - image: docker:18.09.8
+       - image: circleci/python:3.7.4-stretch
     steps:
       - checkout
       - setup_remote_docker
